# DailyRoutine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  analytics.cpp  analytics.h  info.rtf  logic.cpp  logic.h  main.cpp  setup.iss  storage.cpp  storage.h  ui.cpp  ui.h
